Update of documentation
Added usage to README. Added blank notes block to ‘notes.tex’ and
updated sample pdf accordingly.

--- a/template/notes.tex
+++ b/template/notes.tex
@@ -56,13 +56,18 @@
 \maketitle
 \thispagestyle{fancy}
 
-% For each lecture/session/workshop, use one of these \section and lstlisting blocks
-\section*{Lecture title}
+\section*{Example lecture block}
 \begin{lstlisting}
 Main bullet point
 	Sub-point (use tabs)
 	Enclose regular LaTeX with the ~\textasciitilde{}~ (tilde) symbol: ~\LaTeX~
 	Enclose math with the ~\$~ symbol: $ \frac{1}{2} $
+\end{lstlisting}
+
+% For each lecture/session/workshop, use one of these blank \section and lstlisting blocks
+\section*{Lecture title}
+\begin{lstlisting}
+
 \end{lstlisting}
 
 \end{document}
